reference/3.0/Microsoft.PowerShell.Management/Microsoft.PowerShell.Management.md
---
description:  
manager:  carmonm
ms.topic:  reference
author:  jpjofre
ms.prod:  powershell
keywords:  powershell,cmdlet
ms.date:  2016-12-12
title:  Microsoft.PowerShell.Management
ms.technology:  powershell
Locale:   en-US
Module Name:   Microsoft.PowerShell.Management
Download Help Link:   http://go.microsoft.com/fwlink/?linkid=210601
Help Version:   3.3.0.2
Module Guid:   eefcb906-b326-4e99-9f54-8b4bb6ef3c6d
---


# Microsoft.PowerShell.Management Module
## Description
This section contains the help topics for the cmdlets that are installed with Windows PowerShell Microsoft.PowerShell.Management module. The Management module contains cmdlets that help you manage Windows in Windows PowerShell.

## Microsoft.PowerShell.Management Cmdlets
### [Add-Computer](Add-Computer.md)
Add the local computer to a domain or workgroup.


### [Add-Content](Add-Content.md)
Adds content to the specified items, such as adding words to a file.


### [Checkpoint-Computer](Checkpoint-Computer.md)
Creates a system restore point on the local computer.


### [Clear-Content](Clear-Content.md)
Deletes the contents of an item, but does not delete the item.


### [Clear-EventLog](Clear-EventLog.md)
Deletes all entries from specified event logs on the local or remote computers.


### [Clear-ItemProperty](Clear-ItemProperty.md)
Deletes the value of a property but does not delete the property.


### [Clear-Item](Clear-Item.md)
Deletes the contents of an item, but does not delete the item.


### [Complete-Transaction](Complete-Transaction.md)
Commits the active transaction.


### [Convert-Path](Convert-Path.md)
Converts a path from a Windows PowerShell path to a Windows PowerShell provider path.


### [Copy-ItemProperty](Copy-ItemProperty.md)
Copies a property and value from a specified location to another location.


### [Copy-Item](Copy-Item.md)
Copies an item from one location to another.


### [Debug-Process](Debug-Process.md)
Debugs one or more processes running on the local computer.


### [Disable-ComputerRestore](Disable-ComputerRestore.md)
Disables the System Restore feature on the specified file system drive.


### [Enable-ComputerRestore](Enable-ComputerRestore.md)
Enables the System Restore feature on the specified file system drive.


### [Get-ChildItem](Get-ChildItem.md)
Gets the items and child items in one or more specified locations.


### [Get-ComputerRestorePoint](Get-ComputerRestorePoint.md)
Gets the restore points on the local computer.


### [Get-Content](Get-Content.md)
Gets the content of the item at the specified location.


### [Get-ControlPanelItem](Get-ControlPanelItem.md)
Gets control panel items.


### [Get-EventLog](Get-EventLog.md)
Gets the events in an event log, or a list of the event logs, on the local or remote computers.


### [Get-HotFix](Get-HotFix.md)
Gets the hotfixes that have been applied to the local and remote computers.


### [Get-ItemProperty](Get-ItemProperty.md)
Gets the properties of a specified item.


### [Get-Item](Get-Item.md)
Gets the item at the specified location.


### [Get-Location](Get-Location.md)
Gets information about the current working location or a location stack.


### [Get-Process](Get-Process.md)
Gets the processes that are running on the local computer or a remote computer.


### [Get-PSDrive](Get-PSDrive.md)
Gets drives in the current session.


### [Get-PSProvider](Get-PSProvider.md)
Gets information about the specified Windows PowerShell provider.


### [Get-Service](Get-Service.md)
Gets the services on a local or remote computer.


### [Get-Transaction](Get-Transaction.md)
Gets the current (active) transaction.


### [Get-WmiObject](Get-WmiObject.md)
Gets instances of Windows Management Instrumentation (WMI) classes or information about the available classes.


### [Invoke-Item](Invoke-Item.md)
Performs the default action on the specified item.


### [Invoke-WmiMethod](Invoke-WmiMethod.md)
Calls Windows Management Instrumentation (WMI) methods.


### [Join-Path](Join-Path.md)
Combines a path and a child path into a single path.


### [Limit-EventLog](Limit-EventLog.md)
Sets the event log properties that limit the size of the event log and the age of its entries.


### [Move-ItemProperty](Move-ItemProperty.md)
Moves a property from one location to another.


### [Move-Item](Move-Item.md)
Moves an item from one location to another.


### [New-EventLog](New-EventLog.md)
Creates a new event log and a new event source on a local or remote computer.


### [New-ItemProperty](New-ItemProperty.md)
Creates a new property for an item and sets its value.


### [New-Item](New-Item.md)
Creates a new item.


### [New-PSDrive](New-PSDrive.md)
Creates temporary and persistent mapped network drives.


### [New-Service](New-Service.md)
Creates a new Windows service.


### [New-WebServiceProxy](New-WebServiceProxy.md)
Creates a Web service proxy object that lets you use and manage the Web service in Windows PowerShell.


### [Pop-Location](Pop-Location.md)
Changes the current location to the location most recently pushed onto the stack.


### [Push-Location](Push-Location.md)
Adds the current location to the top of a location stack.


### [Register-WmiEvent](Register-WmiEvent.md)
Subscribes to a Windows Management Instrumentation (WMI) event.


### [Remove-Computer](Remove-Computer.md)
Removes the local computer from its domain.


### [Remove-EventLog](Remove-EventLog.md)
Deletes an event log or unregisters an event source.


### [Remove-ItemProperty](Remove-ItemProperty.md)
Deletes the property and its value from an item.


### [Remove-Item](Remove-Item.md)
Deletes the specified items.


### [Remove-PSDrive](Remove-PSDrive.md)
Deletes temporary Windows PowerShell drives and disconnects mapped network drives.


### [Remove-WmiObject](Remove-WmiObject.md)
Deletes an instance of an existing Windows Management Instrumentation (WMI) class.


### [Rename-Computer](Rename-Computer.md)
Renames a computer.


### [Rename-ItemProperty](Rename-ItemProperty.md)
Renames a property of an item.


### [Rename-Item](Rename-Item.md)
Renames an item in a Windows PowerShell provider namespace.


### [Reset-ComputerMachinePassword](Reset-ComputerMachinePassword.md)
Resets the machine account password for the computer.


### [Resolve-Path](Resolve-Path.md)
Resolves the wildcard characters in a path, and displays the path contents.


### [Restart-Computer](Restart-Computer.md)
Restarts ("reboots") the operating system on local and remote computers.


### [Restart-Service](Restart-Service.md)
Stops and then starts one or more services.


### [Restore-Computer](Restore-Computer.md)
Starts a system restore on the local computer.


### [Resume-Service](Resume-Service.md)
Resumes one or more suspended (paused) services.


### [Set-Content](Set-Content.md)
Writes or replaces the content in an item with new content.


### [Set-ItemProperty](Set-ItemProperty.md)
Creates or changes the value of a property of an item.


### [Set-Item](Set-Item.md)
Changes the value of an item to the value specified in the command.


### [Set-Location](Set-Location.md)
Sets the current working location to a specified location.


### [Set-Service](Set-Service.md)
Starts, stops, and suspends a service, and changes its properties.


### [Set-WmiInstance](Set-WmiInstance.md)
Creates or updates an instance of an existing Windows Management Instrumentation (WMI) class.


### [Show-ControlPanelItem](Show-ControlPanelItem.md)
Opens control panel items.


### [Show-EventLog](Show-EventLog.md)
Displays the event logs of the local or a remote computer in Event Viewer.


### [Split-Path](Split-Path.md)
Returns the specified part of a path.


### [Start-Process](Start-Process.md)
Starts one or more processes on the local computer.


### [Start-Service](Start-Service.md)
Starts one or more stopped services.


### [Start-Transaction](Start-Transaction.md)
Starts a transaction.


### [Stop-Computer](Stop-Computer.md)
Stops (shuts down) local and remote computers.


### [Stop-Process](Stop-Process.md)
Stops one or more running processes.


### [Stop-Service](Stop-Service.md)
Stops one or more running services.


### [Suspend-Service](Suspend-Service.md)
Suspends (pauses) one or more running services.


### [Test-ComputerSecureChannel](Test-ComputerSecureChannel.md)
Tests and repairs the secure channel between the local computer and its domain.


### [Test-Connection](Test-Connection.md)
Sends ICMP echo request packets ("pings") to one or more computers.


### [Test-Path](Test-Path.md)
Determines whether all elements of a path exist.


### [Undo-Transaction](Undo-Transaction.md)
Rolls back the active transaction.


### [Use-Transaction](Use-Transaction.md)
Adds the script block to the active transaction.


### [Wait-Process](Wait-Process.md)
Waits for the processes to be stopped before accepting more input.


### [Write-EventLog](Write-EventLog.md)
Writes an event to an event log.

